@@ -5,7 +5,7 @@
 	<key>CFBundleIdentifier</key>
 	<string>org.neubot</string>
 	<key>CFBundleShortVersionString</key>
-	<string>0.4.6-rc4</string>
+	<string>0.4.6-rc5</string>
 	<key>IFPkgFlagAllowBackRev</key>
 	<false/>
 	<key>IFPkgFlagAuthorizationAction</key>
