@@ -67,7 +67,7 @@ class WebkitGUI(gtk.Window):
         if ICON:
             self.set_icon_from_file(ICON)
 
-        self.set_title('Neubot 0.4.6-rc4')
+        self.set_title('Neubot 0.4.6-rc5')
         self.connect('destroy', gtk.main_quit)
         self.maximize()
         self._open_web_page(uri)
